# edgeclaw

./: .gitignore  AGENTS.md  BUILD_AND_DEPLOY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  RUN_TESTS.md  SECURITY.md
.github/workflows/: ci.yml  ios-ci.yml  ios-xcode.yml
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/edgeclaw/mobile/: EdgeClawApp.kt
android/app/src/main/java/com/edgeclaw/mobile/ble/: BleScanner.kt
android/app/src/main/java/com/edgeclaw/mobile/service/: EdgeClawService.kt  PushNotificationHandler.kt  SyncService.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
edgeclaw-core/: Cargo.toml
edgeclaw-core/src/: ecnp.rs  edgeclaw.udl  error.rs  identity.rs  lib.rs  peer.rs  policy.rs  protocol.rs  session.rs  sync.rs  uniffi_bridge.rs
ios/: IOS_QUICKSTART.md  XCODE_PROJECT_SETUP.md  build-rust.sh  generate-bindings.sh
ios/EdgeClaw/: ContentView.swift  EdgeClawApp.swift  Info.plist
ios/EdgeClaw/BLE/: BLEScanner.swift
ios/EdgeClaw/Core/: AppState.swift  BiometricAuthGate.swift  KeyChainManager.swift  Models.swift
ios/EdgeClaw/Network/: SyncService.swift  TCPClient.swift
ios/EdgeClaw/Views/: ChatView.swift  DashboardView.swift  IdentityView.swift  PeersView.swift  SessionsView.swift  SettingsView.swift
ios/EdgeClawTests/: EdgeClawTests.swift
ios/fastlane/: Appfile  Fastfile
(+25 files in other folders)
