[package]
name = "edgeclaw-core"
version = "1.0.0"
edition = "2021"
description = "EdgeClaw Mobile Core - Zero-Trust Edge AI Orchestration"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "edgeclaw_core"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "net", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# Hex encoding
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
